@@ -33,6 +33,8 @@ WriteMakefile1(
         'FindBin'         => 0,
         'Test::More'      => 0,
         'Test::FailWarnings' => 0,
+        'Test::Fatal'       => 0,
+        'Test::Class::Tiny' => 0,
         'Net::Server::HTTP' => 0,
         'File::Temp' => 0,
         'File::Slurper' => 0,
