@@ -2,6 +2,7 @@ Revision history for Perl module Net::Curl::Promiser
 
 0.06
 - Add experimental Promise::XS support.
+- setopt() now fails if given CURLMOPT_SOCKETFUNCTION or CURLMOPT_SOCKETDATA.
 - Clarify in documentation that unless you’re managing a custom event loop
 most of the N::C::P interface isn’t relevant.
 
